--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -12,8 +12,13 @@ spec:
     chart: grafana
     targetRevision: 7.3.9
     helm:
-      valueFiles: 
-        - values.yaml
+      values: |
+        tolerations:
+          - key: "workload"
+            operator: "Equal"
+            value: "operations"
+            effect: "NoSchedule"
+            
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
