--- a/k8s/manifests/backend/gateway-api/backend_gateway-api.yaml
+++ b/k8s/manifests/backend/gateway-api/backend_gateway-api.yaml
@@ -3,6 +3,9 @@ kind: Gateway
 metadata:
   name: backend-gateway
   namespace: istio-gateway
+  labels:
+    app: backend
+    version: v1
 spec:
   gatewayClassName: istio           # changed from nginx to istio
   listeners:
