--- a/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
@@ -3,6 +3,9 @@ kind: HTTPRoute
 metadata:
   name: frontend-httproute
   namespace: istio-gateway
+  labels:
+    app: frontend
+    version: v1
 spec:
   parentRefs:
     - name: frontend-gateway
