--- a/k8s/manifests/backend/obsolete/backend_gateway-api.yaml
+++ b/k8s/manifests/backend/obsolete/backend_gateway-api.yaml
@@ -14,9 +14,9 @@ spec:
   # This prevents health probes and traffic from being sent to
   # system or non-gateway nodes, which would otherwise result
   # in probe failures and dropped traffic.
-  # infrastructure:
-  #   annotations:
-  #     service.istio.io/externalTrafficPolicy: Local
+  infrastructure:
+    annotations:
+      service.istio.io/externalTrafficPolicy: Local
 
   listeners:
     - name: http
