--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -8,6 +8,8 @@ resources:
   - ../../manifests/shared
   - ../../manifests/database
   - backend_config-map.yaml
+  - ../../manifests/ingress
+
 
 # define a dev prefix for all created environment in relation to this overlay
 namePrefix: dev-
@@ -32,23 +34,23 @@ configMapGenerator:
     options:
       disableNameSuffixHash: true
 
-# section for applying all patches
-# patches are applied in this particular case since HTTPRoute and Gateway API resources are a bit trailing (at least at the moment of the implementation)
-# in termsof kustomization management. These resources relatively new compared to ingress and do not fully manage prefix propagation to their referenced resources by kubectl -k
-patches:
-  - target:
-      group: gateway.networking.k8s.io
-      version: v1
-      kind: HTTPRoute
-      name: frontend-httproute
-      namespace: istio-gateway
-    # path to frontend http route to service patch file
-    path: patches/patch-frontend-httproute.yaml
-  - target:
-      group: gateway.networking.k8s.io
-      version: v1
-      kind: HTTPRoute
-      name: backend-httproute
-      namespace: istio-gateway
-    # path to backend http route to service patch file
-    path: patches/patch-backend-httproute.yaml
+# # section for applying all patches
+# # patches are applied in this particular case since HTTPRoute and Gateway API resources are a bit trailing (at least at the moment of the implementation)
+# # in termsof kustomization management. These resources relatively new compared to ingress and do not fully manage prefix propagation to their referenced resources by kubectl -k
+# patches:
+#   - target:
+#       group: gateway.networking.k8s.io
+#       version: v1
+#       kind: HTTPRoute
+#       name: frontend-httproute
+#       namespace: istio-gateway
+#     # path to frontend http route to service patch file
+#     path: patches/patch-frontend-httproute.yaml
+#   - target:
+#       group: gateway.networking.k8s.io
+#       version: v1
+#       kind: HTTPRoute
+#       name: backend-httproute
+#       namespace: istio-gateway
+#     # path to backend http route to service patch file
+#     path: patches/patch-backend-httproute.yaml
