core: configure istio ingress gateways on argocd level

--- a/k8s/gitops/addons/istio/application.yaml
+++ b/k8s/gitops/addons/istio/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: istiod
   namespace: argocd
+  labels:
+    isIstio: "true"
   annotations:
     argocd.argoproj.io/sync-wave: "1"   # I need deamon to be installed after crds
 spec:
