--- a/k8s/manifests/backend/gateway-api/backend_virtual-service.yaml
+++ b/k8s/manifests/backend/gateway-api/backend_virtual-service.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: backend-virtualservice
+  namespace: istio-gateway
   labels:
     app: backend
     version: v1
