--- a/k8s/manifests/frontend/gateway-api/frontend_virtual-service.yaml
+++ b/k8s/manifests/frontend/gateway-api/frontend_virtual-service.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: frontend-virtualservice
+  namespace: istio-gateway
   labels:
     app: frontend
     version: v1
