fix: remove port after istio ingress migration

--- a/k8s/manifests/frontend/config/frontend_config-map.yaml
+++ b/k8s/manifests/frontend/config/frontend_config-map.yaml
@@ -8,4 +8,4 @@ metadata:
 data:
   appSettings.yaml: |
     # yaml file
-    backend_url: http://api.weatherly.local:8080
+    backend_url: http://api.weatherly.local
