renme: rename istio app file name to deamon core: adding service monitors app to enable metrics scraping by prometheus operator core: adding servicemonitor resource which points to envoy's metrics endpoint

--- a/k8s/gitops/addons/kiali/application.yaml
+++ b/k8s/gitops/addons/kiali/application.yaml
@@ -31,6 +31,8 @@ spec:
           prometheus:
             enabled: true
             url: http://prometheus-server-kube-pro-prometheus.monitoring.svc.cluster.local:9090
+            query_scope:
+              cluster: true
           istio:
             enabled: true
             root_namespace: istio-system
