fix: try to fix prometheus to service monitor resolution by migrating sm to monitoring namespace

--- a/k8s/gitops/addons/istio/servicemonitors.yaml
+++ b/k8s/gitops/addons/istio/servicemonitors.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: istio-servicemonitors
+  name: istio-prometheus-servicemonitors
   namespace: argocd
   labels:
     isIstio: "true"
