--- a/k8s/gitops/addons/istio/extras/telemetry.yaml
+++ b/k8s/gitops/addons/istio/extras/telemetry.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: istio-proxy
-  namespace: istio-system
+  namespace: monitoring
 spec:
   selector:
     matchLabels:
