--- a/k8s/gitops/addons/istio/extras/telemetry.yaml
+++ b/k8s/gitops/addons/istio/extras/telemetry.yaml
@@ -1,12 +1,16 @@
 apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
+kind: PodMonitor
 metadata:
   name: istio-proxy
   namespace: istio-system
 spec:
   selector:
-    matchLabels:
-      istio: proxy
-  endpoints:
+    matchExpressions:
+      - key: security.istio.io/tlsMode
+        operator: Exists
+  namespaceSelector:
+    any: true
+  podMetricsEndpoints:
     - port: http-envoy-prom
+      path: /stats/prometheus
       interval: 15s
