--- a/k8s/manifests/shared/shared_gateway-class.yaml
+++ b/k8s/manifests/shared/shared_gateway-class.yaml
@@ -1,6 +1,6 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: GatewayClass
-metadata:
-  name: nginx-gateway-class
-spec:
-  controllerName: nginx.org/gateway
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: GatewayClass
+# metadata:
+#   name: nginx-gateway-class
+# spec:
+#   controllerName: nginx.org/gateway
