fix: adding labels for kiali integration

--- a/k8s/manifests/backend/backend_deployment.yaml
+++ b/k8s/manifests/backend/backend_deployment.yaml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name:  backend-webapp
   namespace: backend
+  labels:
+    app: backend-webapp
+    version: v1
 spec:
   selector:
     matchLabels:
