--- a/k8s/manifests/frontend/frontend_deployment.yaml
+++ b/k8s/manifests/frontend/frontend_deployment.yaml
@@ -4,6 +4,9 @@ kind: Deployment
 metadata:
   name: frontend-webapp
   namespace: frontend
+  labels:
+    app: frontend-webapp
+    version: v1
 spec:
   selector:
     matchLabels:
