--- a/k8s/manifests/backend/backend_deployment.yaml
+++ b/k8s/manifests/backend/backend_deployment.yaml
@@ -3,9 +3,6 @@ kind: Deployment
 metadata:
   name:  backend-webapp
   namespace: backend
-  labels:
-    app: backend-webapp
-    version: v1
 spec:
   selector:
     matchLabels:
@@ -24,6 +21,8 @@ spec:
         app: backend-webapp
         # optional (nice to have)
         editor: vscode
+        # necessary for kiali integration
+        version: v1
     spec:
       # give pod 30 seconds to shit down after kube sends SIGTERM signal
       terminationGracePeriodSeconds: 30
