test: adding version selector for kiali ?

--- a/k8s/gitops/addons/istio/ingress.yaml
+++ b/k8s/gitops/addons/istio/ingress.yaml
@@ -19,6 +19,7 @@ spec:
 
         labels:
           istio: ingressgateway
+          version: v1
         
         tolerations:
           - key: workload
