--- a/k8s/gitops/addons/prometheus/application.yaml
+++ b/k8s/gitops/addons/prometheus/application.yaml
@@ -16,6 +16,7 @@ spec:
       values: |
         prometheus:
           prometheusSpec:
+            enableAdminAPI: true
             tolerations:
               - key: workload
                 operator: Equal
