--- a/k8s/manifests/frontend/frontend_deployment.yaml
+++ b/k8s/manifests/frontend/frontend_deployment.yaml
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: frontend-webapp
   namespace: frontend
+  annotations:
+    sidecar.istio.io/inject: "true"
 spec:
   selector:
     matchLabels:
