core: enable debugging on applications core: try to fix kiali integration with specifying port name core: enable istio injection for htg

--- a/k8s/gitops/addons/prometheus/application.yaml
+++ b/k8s/gitops/addons/prometheus/application.yaml
@@ -17,6 +17,9 @@ spec:
         prometheus:
           prometheusSpec:
             enableAdminAPI: true
+            logLevel: debug
+            additionalAgs:
+              - --log.level=debug
             tolerations:
               - key: workload
                 operator: Equal
