--- a/k8s/gitops/addons/kiali/application.yaml
+++ b/k8s/gitops/addons/kiali/application.yaml
@@ -34,18 +34,19 @@ spec:
         external_services:
           prometheus:
             enabled: true
-            url: http://prometheus-server-kube-pro-prometheus.monitoring.svc.cluster.local:9090
-            custom_metrics_url: http://prometheus-server-kube-pro-prometheus.monitoring.svc.cluster.local:9090
+            cache_enabled: false
+            url: http://prometheus-operated.monitoring:9090
+            custom_metrics_url: http://prometheus-operated.monitoring:9090
             query_scope:
-              cluster: tru
+              cluster: true
             rate:
-              interval: 5m
+              interval: 1m
           istio:
             enabled: true
             root_namespace: istio-system
             component_status:
               enabled: true
-              
+
           tracing:
             enabled: false
         
@@ -62,19 +63,19 @@ spec:
             edges:
               - idle: false  # Don't hide idle edges
 
-        health_config:
-          # Disable side car check for these namespaces (optional for clean kiali interface)
-          # Kiali checks istio proxy sidecar injection for all namespaces by default
-          namespace:
-            - name: istio-system
-              health:
-                sidecar: false
-            - name: istio-gateway
-              health:
-                sidecar: false
-            - name: monitoring
-              health:
-                sidecar: false
+        # health_config:
+        #   # Disable side car check for these namespaces (optional for clean kiali interface)
+        #   # Kiali checks istio proxy sidecar injection for all namespaces by default
+        #   namespace:
+        #     - name: istio-system
+        #       health:
+        #         sidecar: false
+        #     - name: istio-gateway
+        #       health:
+        #         sidecar: false
+        #     - name: monitoring
+        #       health:
+        #         sidecar: false
 
         kiali_feature_flags:
           istio_injection_action: true
