--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: heavy-traffic-generator
     version: v1
+  annotations:
+    sidecar.istio.io/inject: "true"
 spec:
   replicas: 1
   selector:
