--- a/k8s/manifests/backend/services/backend_service.yaml
+++ b/k8s/manifests/backend/services/backend_service.yaml
@@ -1,5 +1,5 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: backend-service
   namespace: backend
@@ -8,5 +8,6 @@ spec:
     app: backend-webapp
     version: v1
   ports:
-  - port: 8080
+  - name: http
+    port: 8080
     targetPort: 80
