fix: correct protocol naming for kiali

--- a/k8s/manifests/database/redis/services/redis_write-service.yaml
+++ b/k8s/manifests/database/redis/services/redis_write-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: backend
 spec:
   ports:
-  - name: resp
+  - name: redis
     port: 6379
   selector:
     # writes are directed to redis-0 pod
