--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -24,25 +24,28 @@ spec:
       containers:
       - name: generator
         image: ghcr.io/nicholasjackson/fake-service:v0.26.0
+
+        # Expose HTTP server → required for Kiali application identity
+        ports:
+        - name: http
+          containerPort: 8080
+          protocol: TCP
+
         env:
-        # Expose an HTTP server (makes it a real app)
+        # Application listens on HTTP
         - name: LISTEN_ADDR
           value: "0.0.0.0:8080"
 
-        # Generate outbound traffic (THIS is what creates the edge)
+        # ✅ DIRECT IN-MESH call to backend
         - name: UPSTREAM_URIS
-          value: "http://dev-frontend-service.frontend.svc.cluster.local"
+          value: "http://dev-backend-service.backend.svc.cluster.local:8080"
 
-        # Control traffic rate (10 req/sec)
+        # Generate steady load
         - name: UPSTREAM_WORKERS
           value: "10"
 
-        # Optional: make logs quieter
         - name: LOG_LEVEL
           value: "info"
-
-        ports:
-        - containerPort: 8080
 
         resources:
           requests:
