--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -38,7 +38,7 @@ spec:
 
         # ✅ DIRECT IN-MESH call to backend
         - name: UPSTREAM_URIS
-          value: "http://dev-backend-service.backend.svc.cluster.local:8080/WeatherForecast"
+          value: "http://dev-backend-service.backend.svc.cluster.local/WeatherForecast"
 
         # Generate steady load
         - name: UPSTREAM_WORKERS
