fix: adding version to redis statefulset for kiali integration

--- a/k8s/manifests/database/redis/redis_stateful-set.yaml
+++ b/k8s/manifests/database/redis/redis_stateful-set.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: redis
+        # necessary for kiali integration
+        version: v1
     spec:
       containers:
       - name: redis
