--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -24,32 +24,16 @@ spec:
       containers:
       - name: generator
         image: ghcr.io/nicholasjackson/fake-service:v0.26.0
-
-        # Expose HTTP server → required for Kiali application identity
         ports:
         - name: http
           containerPort: 8080
-          protocol: TCP
-
         env:
-        # Application listens on HTTP
         - name: LISTEN_ADDR
           value: "0.0.0.0:8080"
-
-        # ✅ DIRECT IN-MESH call to backend
         - name: UPSTREAM_URIS
           value: "http://dev-backend-service.backend.svc.cluster.local/WeatherForecast"
-
         - name: UPSTREAM_REQUESTS_PER_SECOND
           value: "5"
-
-        # Generate steady load
-        - name: UPSTREAM_WORKERS
-          value: "10"
-
-        - name: LOG_LEVEL
-          value: "info"
-
         resources:
           requests:
             cpu: "50m"
@@ -57,3 +41,21 @@ spec:
           limits:
             cpu: "200m"
             memory: "128Mi"
+
+      - name: trigger
+        image: curlimages/curl:8.6.0
+        command: ["/bin/sh"]
+        args:
+        - -c
+        - |
+          while true; do
+            curl -s http://localhost:8080 > /dev/null
+            sleep 0.2
+          done
+        resources:
+          requests:
+            cpu: "5m"
+            memory: "16Mi"
+          limits:
+            cpu: "20m"
+            memory: "32Mi"
