core: add labels for received bytes core: add persistence to grafana addon

--- a/k8s/manifests/database/redis/services/redis_headless-service.yaml
+++ b/k8s/manifests/database/redis/services/redis_headless-service.yaml
@@ -13,9 +13,13 @@ kind: Service
 metadata:
   name: redis
   namespace: backend
+  labels:
+    app: redis
+    version: v1
 spec:
   selector:
     app: redis
+    version: v1
   ports:
   - port: 6379
     name: redis
