--- a/k8s/manifests/database/redis/services/redis_write-service.yaml
+++ b/k8s/manifests/database/redis/services/redis_write-service.yaml
@@ -4,6 +4,9 @@ kind: Service
 metadata:
   name: redis-primary
   namespace: backend
+  labels:
+    app: redis
+    version: v1
 spec:
   ports:
   - name: redis
