--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -18,7 +18,38 @@ spec:
             operator: "Equal"
             value: "operations"
             effect: "NoSchedule"
-            
+
+        # Below is a gitops friendly way to declare a datasource for the grafana instance
+        # The datasource simply points to the prometheus service 
+        # that is deployed via the prometheus argocd app
+        datasources:
+          datasources.yaml:
+            apiVersion: 1
+            datasources:
+              # local prometheus service
+              - name: Prometheus
+                type: prometheus
+                access: proxy
+                url: http://prometheus-server-kube-pro-prometheus.monitoring.svc.cluster.local:9090
+                isDefault: true
+                editable: false
+              # current kubernetes cluster
+              - name: Kubernetes
+                type: kubernetes
+                access: proxy
+                url: https://kubernetes.default.svc
+                jsonData:
+                  authType: serviceAccount
+                  tlsSkipVerify: true
+                editable: false
+        # It is important that grafana database is persisted
+        # Otherwise, dashboards and data will be reset on cluster restart or any event happening in the nodes
+        persistence:
+          type: pvc
+          enabled: true
+          storageClassName: default
+
+        adminUser: admin
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
