core: add version and rename ingress object

--- a/k8s/manifests/ingress/istio-gateway.yaml
+++ b/k8s/manifests/ingress/istio-gateway.yaml
@@ -4,7 +4,8 @@ metadata:
   name: weatherly-gateway
   namespace: istio-gateway
   labels:
-    app: gateway
+    app: istioingress
+    version: v1
 spec:
   selector:
     istio: ingressgateway
