core: rename backend folder to weather forecast data api core: rename frontend folder to weather forecast frontend core: adding cluster attachment and argocd installation to init script core: update tolerations to match new node taint (weather-forecast)

--- a/k8s/gitops/addons/istio/deamon.yaml
+++ b/k8s/gitops/addons/istio/deamon.yaml
@@ -17,11 +17,11 @@ spec:
       values: |
         # Pilot (istiod) configuration
         pilot:
-          # Node tolerations for operations nodepool
+          # Node tolerations for weather-forecast nodepool
           tolerations:
             - key: workload
               operator: Equal
-              value: operations
+              value: weather-forecast
               effect: NoSchedule
           
           # Sidecar injector webhook configuration
