--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana
   namespace: argocd
   labels:
-    workload: operations
+    workload: weather-forecast
 spec:
   project: default
   source:
@@ -16,7 +16,7 @@ spec:
         tolerations:
           - key: "workload"
             operator: "Equal"
-            value: "operations"
+            value: "weather-forecast"
             effect: "NoSchedule"
 
         # Below is a gitops friendly way to declare a datasource for the grafana instance
