--- a/k8s/manifests/weather-forecast-frontend/frontend_deployment.yaml
+++ b/k8s/manifests/weather-forecast-frontend/frontend_deployment.yaml
@@ -69,7 +69,7 @@ spec:
       # can be multiple containers since one pod scan contain multiple containers
       - name: frontend-webapp
         # test image from docker registry, provided by nginx project
-        image: acrdevzlj7yj.azurecr.io/weather-forecast-frontend:0.1.0-7b109e4
+        image: acrdevtshpwn.azurecr.io/weather-forecast-frontend:0.1.0-singleNodePool.1-55a41ad
         ports:
         - containerPort: 80
         imagePullPolicy: Always # Always pull latest version
