--- a/k8s/manifests/weather-forecast-data-api/services/backend_service.yaml
+++ b/k8s/manifests/weather-forecast-data-api/services/backend_service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: backend
 spec:
   selector:
-    app: backend-webapp
+    app: weather-forecast-bff
     version: v1
   ports:
   - name: http
