--- a/k8s/manifests/weather-forecast-frontend/high-availability/frontend_hpa.yaml
+++ b/k8s/manifests/weather-forecast-frontend/high-availability/frontend_hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: frontend-webapp
+    name: weather-forecast-frontend
   minReplicas: 1
   maxReplicas: 2
   metrics:
