--- a/k8s/manifests/weather-forecast-frontend/services/frontend_service.yaml
+++ b/k8s/manifests/weather-forecast-frontend/services/frontend_service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: frontend
 spec:
   selector:
-    app: frontend-webapp
+    app: weather-forecast-frontend
     version: v1
   ports:
   - name: http
