--- a/k8s/gitops/apps/weatherly/sandbox/sandbox-application.yaml
+++ b/k8s/gitops/apps/weatherly/sandbox/sandbox-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev-weatherly-app
+  name: sandbox-weatherly-app
   namespace: argocd
   labels:
     workload: applications
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
     targetRevision: feature/k8sWorkloadsMigration
-    path: k8s/overlays/dev
+    path: k8s/overlays/sandbox
   destination:
     server: https://kubernetes.default.svc
     namespace: default
