--- a/k8s/gitops/apps/weatherly/sandbox.yaml
+++ b/k8s/gitops/apps/weatherly/sandbox.yaml
@@ -15,9 +15,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
     syncOptions:
       - CreateNamespace=true
     retry:
