--- a/k8s/gitops/apps/weatherly/sandbox.yaml
+++ b/k8s/gitops/apps/weatherly/sandbox.yaml
@@ -9,8 +9,8 @@ spec:
   project: default
   source:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
-    targetRevision: feature/k8sWorkloadsMigration
-    path: k8s/overlays/sandbox
+    targetRevision: disabled
+    path: empty
   destination:
     server: https://kubernetes.default.svc
     namespace: default
