--- a/k8s/gitops/apps/weatherly/sandbox.yaml
+++ b/k8s/gitops/apps/weatherly/sandbox.yaml
@@ -15,7 +15,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
     retry:
