core: restructure k8s folder to match new project semantics and make place for weather forecast insights service

--- a/k8s/manifests/weater-forecast/bff/high-availability/pod-disruption-budget.yaml
+++ b/k8s/manifests/weater-forecast/bff/high-availability/pod-disruption-budget.yaml
@@ -1,10 +1,10 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: pdb-frontend-app
-  namespace: frontend
+  name: weather-forecast-bff-pdb
+  namespace: backend
 spec:
   minAvailable: 1
   selector:
     matchLabels:
-      app: weather-forecast-frontend
+      app: weather-forecast-bff
