--- a/k8s/manifests/weater-forecast/frontend/deployment.yaml
+++ b/k8s/manifests/weater-forecast/frontend/deployment.yaml
@@ -101,10 +101,10 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 10
         volumeMounts:
-          - name: frontend-config-volume
+          - name: weather-forecast-frontend-config-volume
             mountPath: '/usr/share/nginx/html/config'
             readOnly: true
       volumes:
-        - name:  frontend-config-volume
+        - name:  weather-forecast-frontend-config-volume
           configMap:
-            name: frontend-configmap
+            name: weather-forecast-frontend-configmap
