--- a/k8s/manifests/shared/kustomization.yaml
+++ b/k8s/manifests/shared/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  namespace: istio-ingress
+  name: shared-kustomization 
 
 resources:
-  - shared_namespace-istio.yaml
+  - namespace-istio.yaml
+  - istio-gateway.yaml
