--- a/k8s/manifests/weater-forecast/bff/deployment.yaml
+++ b/k8s/manifests/weater-forecast/bff/deployment.yaml
@@ -96,4 +96,4 @@ spec:
       volumes:
       - name: config
         configMap:
-          name: backend-configmap
+          name: weather-forecast-bff-configmap
