--- a/k8s/manifests/weater-forecast/bff/high-availability/hpa.yaml
+++ b/k8s/manifests/weater-forecast/bff/high-availability/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: backend-hpa
+  name: weather-forecast-bff-hpa
   namespace: backend
 spec:
   scaleTargetRef:
