--- a/k8s/manifests/weater-forecast/bff/services/service.yaml
+++ b/k8s/manifests/weater-forecast/bff/services/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: weather-forecast-bff-service
   namespace: backend
 spec:
   selector:
