--- a/k8s/manifests/weater-forecast/frontend/high-availability/hpa.yaml
+++ b/k8s/manifests/weater-forecast/frontend/high-availability/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: frontend-hpa
+  name: weather-forecast-frontend-hpa
   namespace: frontend
 spec:
   scaleTargetRef:
