--- a/k8s/manifests/weater-forecast/frontend/high-availability/pod-disruption-budget.yaml
+++ b/k8s/manifests/weater-forecast/frontend/high-availability/pod-disruption-budget.yaml
@@ -1,10 +1,10 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: pdb-backend-app
-  namespace: backend
+  name: weather-forecast-frontend-pdb
+  namespace: frontend
 spec:
   minAvailable: 1
   selector:
     matchLabels:
-      app: weather-forecast-bff
+      app: weather-forecast-frontend
