--- a/k8s/manifests/weater-forecast/frontend/services/frontend_service.yaml
+++ b/k8s/manifests/weater-forecast/frontend/services/frontend_service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: weather-forecast-frontend-service
   namespace: frontend
 spec:
   selector:
