--- a/k8s/gitops/apps/weatherly/dev.yaml
+++ b/k8s/gitops/apps/weatherly/dev.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
-    targetRevision: develop
+    targetRevision: feature/k8sWorkloadsMigration
     path: k8s/overlays/dev
   destination:
     server: https://kubernetes.default.svc
