rename: propagate renames to config maps

--- a/k8s/manifests/weather-forecast/frontend/config/config-map.yaml
+++ b/k8s/manifests/weather-forecast/frontend/config/config-map.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: frontend-configmap
+  name: weather-forecast-frontend_config-map
   namespace: frontend
   labels:
-    app: frontend-configmap
+    app: weather-forecast-frontend_config-map
 data:
   appSettings.yaml: |
     # yaml file
