--- a/k8s/overlays/dev/weather-forecast-bff_config-map.yaml
+++ b/k8s/overlays/dev/weather-forecast-bff_config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: backend-configmap
+  name: weather-forecast-bff_config-map
   namespace: backend
 data:
   appsettings.json: |
