fix: categorize back addons to operations label

--- a/k8s/gitops/addons/istio/crds.yaml
+++ b/k8s/gitops/addons/istio/crds.yaml
@@ -8,6 +8,7 @@ metadata:
   namespace: argocd
   labels:
     isIstio: "true"
+    workload: operations
   annotations:
     argocd.argoproj.io/sync-wave: "0"   # I need crds to exist before deamon
 spec:
