--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana
   namespace: argocd
   labels:
-    workload: weather-forecast
+    workload: operations
 spec:
   project: default
   source:
