--- a/k8s/gitops/addons/istio/deamon.yaml
+++ b/k8s/gitops/addons/istio/deamon.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   labels:
     isIstio: "true"
+    workload: operations
   annotations:
     argocd.argoproj.io/sync-wave: "1"   # I need deamon to be installed after crds
 spec:
