--- a/k8s/gitops/addons/istio/podmonitors.yaml
+++ b/k8s/gitops/addons/istio/podmonitors.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   labels:
     isIstio: "true"
+    workload: operations
   annotations:
     argocd.argoproj.io/sync-wave: "3"   # Install monitors after istio deamon, crds and ingress
 spec:
